--- a/Proyecto_Cpp/Proyecto_Cpp.vcxproj
+++ b/Proyecto_Cpp/Proyecto_Cpp.vcxproj
@@ -127,7 +127,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\..\UPM\3\Segundo cuatrimestre\Informatica induatrial\Programas de clase\Ejercicios de clase\Ejercicios de clase\Asciigraphics.cpp" />
     <ClCompile Include="main.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\UPM\3\Segundo cuatrimestre\Informatica induatrial\Programas de clase\Ejercicios de clase\Ejercicios de clase\AsciiGraphics.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
