--- a/Proyecto_Cpp/Proyecto_Cpp.vcxproj.filters
+++ b/Proyecto_Cpp/Proyecto_Cpp.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="main.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="..\..\..\UPM\3\Segundo cuatrimestre\Informatica induatrial\Programas de clase\Ejercicios de clase\Ejercicios de clase\Asciigraphics.cpp">
+      <Filter>Archivos de encabezado</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\..\..\UPM\3\Segundo cuatrimestre\Informatica induatrial\Programas de clase\Ejercicios de clase\Ejercicios de clase\AsciiGraphics.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
