added "tablero" object and cell subobject.

--- a/Proyecto_Cpp/Proyecto_Cpp.vcxproj.filters
+++ b/Proyecto_Cpp/Proyecto_Cpp.vcxproj.filters
@@ -24,12 +24,18 @@
     <ClCompile Include="graphics.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
+    <ClCompile Include="tempObjects.cpp">
+      <Filter>Archivos de origen</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsciiGraphics.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
     <ClInclude Include="graphics.h">
+      <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="tempObjects.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
   </ItemGroup>
