--- a/Proyecto_Cpp/Proyecto_Cpp.vcxproj
+++ b/Proyecto_Cpp/Proyecto_Cpp.vcxproj
@@ -130,10 +130,12 @@
     <ClCompile Include="Asciigraphics.cpp" />
     <ClCompile Include="graphics.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="tempObjects.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsciiGraphics.h" />
     <ClInclude Include="graphics.h" />
+    <ClInclude Include="tempObjects.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
