clase socket creada, codigo limpio
clase socket creada
limpieza de codigo
sockets no están implementados en cliente y servidor

--- a/Proyecto_Cpp/Proyecto_Cpp.vcxproj
+++ b/Proyecto_Cpp/Proyecto_Cpp.vcxproj
@@ -131,11 +131,13 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Cliente.cpp" />
     <ClCompile Include="Servidor.cpp" />
+    <ClCompile Include="Socket.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsciiGraphics.h" />
     <ClInclude Include="Cliente.h" />
     <ClInclude Include="Servidor.h" />
+    <ClInclude Include="Socket.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
