--- a/Proyecto_Cpp/Proyecto_Cpp.vcxproj
+++ b/Proyecto_Cpp/Proyecto_Cpp.vcxproj
@@ -129,11 +129,13 @@
   <ItemGroup>
     <ClCompile Include="Asciigraphics.cpp" />
     <ClCompile Include="main.cpp" />
+    <ClCompile Include="Partida.cpp" />
     <ClCompile Include="Ranking.cpp" />
     <ClCompile Include="Registro.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AsciiGraphics.h" />
+    <ClInclude Include="Partida.h" />
     <ClInclude Include="Ranking.h" />
     <ClInclude Include="Registro.h" />
   </ItemGroup>
