actualizar ranking completado
funcinoes creadas para actualizar el ranking
falta integrarlas
falta poner las clases bonitas

--- a/Proyecto_Cpp/Proyecto_Cpp.vcxproj
+++ b/Proyecto_Cpp/Proyecto_Cpp.vcxproj
@@ -129,6 +129,7 @@
   <ItemGroup>
     <ClCompile Include="Asciigraphics.cpp" />
     <ClCompile Include="Campo.cpp" />
+    <ClCompile Include="DatosRanking.cpp" />
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Partida.cpp" />
     <ClCompile Include="Ranking.cpp" />
@@ -137,6 +138,7 @@
   <ItemGroup>
     <ClInclude Include="AsciiGraphics.h" />
     <ClInclude Include="Campo.h" />
+    <ClInclude Include="DatosRanking.h" />
     <ClInclude Include="Partida.h" />
     <ClInclude Include="Ranking.h" />
     <ClInclude Include="NoFinalizadas.h" />
