Arregladas dependecias de proyecto

--- a/Proyecto_Cpp/Proyecto_Cpp.vcxproj.filters
+++ b/Proyecto_Cpp/Proyecto_Cpp.vcxproj.filters
@@ -27,32 +27,32 @@
     <ClCompile Include="main.cpp">
       <Filter>Archivos de origen</Filter>
     </ClCompile>
-    <ClCompile Include="Caballo.cpp">
-      <Filter>Archivos de origen\.cpp Archivos de encabezado</Filter>
-    </ClCompile>
-    <ClCompile Include="Peon.cpp">
-      <Filter>Archivos de origen\.cpp Archivos de encabezado</Filter>
-    </ClCompile>
-    <ClCompile Include="Reina.cpp">
-      <Filter>Archivos de origen\.cpp Archivos de encabezado\Piezas</Filter>
-    </ClCompile>
     <ClCompile Include="Pieza.cpp">
       <Filter>Archivos de origen\.cpp Archivos de encabezado</Filter>
     </ClCompile>
     <ClCompile Include="Tablero.cpp">
       <Filter>Archivos de origen\.cpp Archivos de encabezado</Filter>
     </ClCompile>
+    <ClCompile Include="Caballo.cpp">
+      <Filter>Archivos de origen\.cpp Archivos de encabezado\Piezas</Filter>
+    </ClCompile>
+    <ClCompile Include="Peon.cpp">
+      <Filter>Archivos de origen\.cpp Archivos de encabezado\Piezas</Filter>
+    </ClCompile>
+    <ClCompile Include="Rey.cpp">
+      <Filter>Archivos de origen\.cpp Archivos de encabezado\Piezas</Filter>
+    </ClCompile>
+    <ClCompile Include="Reina.cpp">
+      <Filter>Archivos de origen\.cpp Archivos de encabezado\Piezas</Filter>
+    </ClCompile>
+    <ClCompile Include="Torre.cpp">
+      <Filter>Archivos de origen\.cpp Archivos de encabezado\Piezas</Filter>
+    </ClCompile>
+    <ClCompile Include="Alfil.cpp">
+      <Filter>Archivos de origen\.cpp Archivos de encabezado\Piezas</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Peon.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
-    <ClInclude Include="Caballo.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
-    <ClInclude Include="Rey.h">
-      <Filter>Archivos de encabezado</Filter>
-    </ClInclude>
     <ClInclude Include="Pieza.h">
       <Filter>Archivos de encabezado</Filter>
     </ClInclude>
@@ -61,6 +61,24 @@
     </ClInclude>
     <ClInclude Include="Posicion.h">
       <Filter>Archivos de encabezado</Filter>
+    </ClInclude>
+    <ClInclude Include="Caballo.h">
+      <Filter>Archivos de encabezado\Piezas</Filter>
+    </ClInclude>
+    <ClInclude Include="Peon.h">
+      <Filter>Archivos de encabezado\Piezas</Filter>
+    </ClInclude>
+    <ClInclude Include="Rey.h">
+      <Filter>Archivos de encabezado\Piezas</Filter>
+    </ClInclude>
+    <ClInclude Include="Reina.h">
+      <Filter>Archivos de encabezado\Piezas</Filter>
+    </ClInclude>
+    <ClInclude Include="Torre.h">
+      <Filter>Archivos de encabezado\Piezas</Filter>
+    </ClInclude>
+    <ClInclude Include="Alfil.h">
+      <Filter>Archivos de encabezado\Piezas</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
