--- a/Proyecto_Cpp/Proyecto_Cpp.vcxproj
+++ b/Proyecto_Cpp/Proyecto_Cpp.vcxproj
@@ -132,7 +132,7 @@
     <ClCompile Include="main.cpp" />
     <ClCompile Include="Peon.cpp" />
     <ClCompile Include="Pieza.cpp" />
-    <ClCompile Include="Reina.cpp" />
+    <ClCompile Include="Dama.cpp" />
     <ClCompile Include="Rey.cpp" />
     <ClCompile Include="Tablero.cpp" />
     <ClCompile Include="Torre.cpp" />
@@ -143,7 +143,7 @@
     <ClInclude Include="Peon.h" />
     <ClInclude Include="Pieza.h" />
     <ClInclude Include="Posicion.h" />
-    <ClInclude Include="Reina.h" />
+    <ClInclude Include="Dama.h" />
     <ClInclude Include="Rey.h" />
     <ClInclude Include="Tablero.h" />
     <ClInclude Include="Torre.h" />
