--- a/Ajedrez/Ajedrez.vcxproj
+++ b/Ajedrez/Ajedrez.vcxproj
@@ -74,7 +74,11 @@
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <OutDir>$(SolutionDir)\bin</OutDir>
     <IntDir>$(SolutionDir)\temp</IntDir>
-    <LibraryPath>C:\Users\bogur\Desktop\Informatica\Trabajo\Ajedrez\Ajedrez\Ajedrez\lib;$(LibraryPath)</LibraryPath>
+    <LibraryPath>C:\Users\Rubikrazy\source\repos\Vegely\Ajedrez\Ajedrez\lib;$(LibraryPath)</LibraryPath>
+  </PropertyGroup>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
+    <OutDir>$(SolutionDir)\bin\</OutDir>
+    <IntDir>$(SolutionDir)\temp\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
@@ -139,7 +143,9 @@
     <ClCompile Include="src\camera.cpp" />
     <ClCompile Include="src\Dama.cpp" />
     <ClCompile Include="src\graphics.cpp" />
+    <ClCompile Include="src\IA.cpp" />
     <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\Movimiento.cpp" />
     <ClCompile Include="src\Peon.cpp" />
     <ClCompile Include="src\Pieza.cpp" />
     <ClCompile Include="src\plane.cpp" />
@@ -156,6 +162,8 @@
     <ClInclude Include="src\Dama.h" />
     <ClInclude Include="src\freeglut.h" />
     <ClInclude Include="src\graphics.h" />
+    <ClInclude Include="src\IA.h" />
+    <ClInclude Include="src\Movimiento.h" />
     <ClInclude Include="src\Peon.h" />
     <ClInclude Include="src\Pieza.h" />
     <ClInclude Include="src\plane.h" />
