--- a/Ajedrez/Ajedrez.vcxproj.filters
+++ b/Ajedrez/Ajedrez.vcxproj.filters
@@ -13,96 +13,120 @@
       <UniqueIdentifier>{67DA6AB6-F800-4c08-8B7A-83BB121AAD01}</UniqueIdentifier>
       <Extensions>rc;ico;cur;bmp;dlg;rc2;rct;bin;rgs;gif;jpg;jpeg;jpe;resx;tiff;tif;png;wav;mfcribbon-ms</Extensions>
     </Filter>
+    <Filter Include="Header Files\Graficos">
+      <UniqueIdentifier>{83a9fce7-cd69-4c59-9371-ff715ab53091}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Header Files\Ajedrez">
+      <UniqueIdentifier>{a7b94c1a-903f-45b1-9786-3571f0da3f26}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Ajedrez">
+      <UniqueIdentifier>{7fa2acfa-53c7-4dca-b232-b00d4456c369}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Resource Files\Graficos">
+      <UniqueIdentifier>{d65600b2-e3c8-46b9-a1a5-2e90a727619c}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="src\main.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Dama.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\graphics.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Peon.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Pieza.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\plane.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Rey.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\structs.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Tablero.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\Torre.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
     <ClCompile Include="src\Alfil.cpp">
-      <Filter>Resource Files</Filter>
-    </ClCompile>
-    <ClCompile Include="src\board.cpp">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Ajedrez</Filter>
     </ClCompile>
     <ClCompile Include="src\Caballo.cpp">
-      <Filter>Resource Files</Filter>
+      <Filter>Resource Files\Ajedrez</Filter>
     </ClCompile>
     <ClCompile Include="src\camera.cpp">
+      <Filter>Resource Files\Ajedrez</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Dama.cpp">
+      <Filter>Resource Files\Ajedrez</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Peon.cpp">
+      <Filter>Resource Files\Ajedrez</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Pieza.cpp">
+      <Filter>Resource Files\Ajedrez</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Rey.cpp">
+      <Filter>Resource Files\Ajedrez</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Tablero.cpp">
+      <Filter>Resource Files\Ajedrez</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Torre.cpp">
+      <Filter>Resource Files\Ajedrez</Filter>
+    </ClCompile>
+    <ClCompile Include="src\board.cpp">
+      <Filter>Resource Files\Graficos</Filter>
+    </ClCompile>
+    <ClCompile Include="src\graphics.cpp">
+      <Filter>Resource Files\Graficos</Filter>
+    </ClCompile>
+    <ClCompile Include="src\plane.cpp">
+      <Filter>Resource Files\Graficos</Filter>
+    </ClCompile>
+    <ClCompile Include="src\structs.cpp">
+      <Filter>Resource Files\Graficos</Filter>
+    </ClCompile>
+    <ClCompile Include="src\IA.cpp">
       <Filter>Resource Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\main.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Movimiento.cpp">
+      <Filter>Resource Files\Ajedrez</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\camera.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Dama.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\freeglut.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\graphics.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Peon.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Pieza.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\plane.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Posicion.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Rey.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\structs.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Tablero.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\Torre.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
     <ClInclude Include="src\Alfil.h">
-      <Filter>Header Files</Filter>
-    </ClInclude>
-    <ClInclude Include="src\board.h">
-      <Filter>Header Files</Filter>
+      <Filter>Header Files\Ajedrez</Filter>
     </ClInclude>
     <ClInclude Include="src\Caballo.h">
+      <Filter>Header Files\Ajedrez</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Dama.h">
+      <Filter>Header Files\Ajedrez</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Peon.h">
+      <Filter>Header Files\Ajedrez</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Pieza.h">
+      <Filter>Header Files\Ajedrez</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Rey.h">
+      <Filter>Header Files\Ajedrez</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Tablero.h">
+      <Filter>Header Files\Ajedrez</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Posicion.h">
+      <Filter>Header Files\Ajedrez</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Torre.h">
+      <Filter>Header Files\Ajedrez</Filter>
+    </ClInclude>
+    <ClInclude Include="src\freeglut.h">
+      <Filter>Header Files\Graficos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\camera.h">
+      <Filter>Header Files\Graficos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\graphics.h">
+      <Filter>Header Files\Graficos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\structs.h">
+      <Filter>Header Files\Graficos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\plane.h">
+      <Filter>Header Files\Graficos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\board.h">
+      <Filter>Header Files\Graficos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\IA.h">
       <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Movimiento.h">
+      <Filter>Header Files\Ajedrez</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
