--- a/Ajedrez/Ajedrez.vcxproj
+++ b/Ajedrez/Ajedrez.vcxproj
@@ -142,7 +142,10 @@
   <ItemGroup>
     <ClCompile Include="src\Alfil.cpp" />
     <ClCompile Include="src\Caballo.cpp" />
+    <ClCompile Include="src\Callbacks.cpp" />
+    <ClCompile Include="src\Camera.cpp" />
     <ClCompile Include="src\Dama.cpp" />
+    <ClCompile Include="src\Globals.cpp" />
     <ClCompile Include="src\IA.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\Movimiento.cpp" />
@@ -155,7 +158,10 @@
   <ItemGroup>
     <ClInclude Include="src\Alfil.h" />
     <ClInclude Include="src\Caballo.h" />
+    <ClInclude Include="src\Callbacks.h" />
+    <ClInclude Include="src\Camera.h" />
     <ClInclude Include="src\Dama.h" />
+    <ClInclude Include="src\Globals.h" />
     <ClInclude Include="src\IA.h" />
     <ClInclude Include="src\Movimiento.h" />
     <ClInclude Include="src\Peon.h" />
