--- a/.gitignore
+++ b/.gitignore
@@ -404,3 +404,7 @@ Ajedrez/temp/Ajedrez.ilk
 *.ilk
 *.db
 Ajedrez/.vs/Ajedrez/v17/.suo
+.vs/Ajedrez/v17/.wsuo
+*.db
+*.sqlite
+Ajedrez/.vs/Ajedrez/v17/.suo
