--- a/Ajedrez/Ajedrez.vcxproj.filters
+++ b/Ajedrez/Ajedrez.vcxproj.filters
@@ -15,10 +15,16 @@
     <ClCompile Include="src\Callbacks.cpp">
       <Filter>Graficos</Filter>
     </ClCompile>
-    <ClCompile Include="src\Camera.cpp">
+    <ClCompile Include="src\Camara.cpp">
       <Filter>Graficos</Filter>
     </ClCompile>
     <ClCompile Include="src\Globals.cpp">
+      <Filter>Graficos</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Graphics.cpp">
+      <Filter>Graficos</Filter>
+    </ClCompile>
+    <ClCompile Include="src\Modelo.cpp">
       <Filter>Graficos</Filter>
     </ClCompile>
   </ItemGroup>
@@ -37,10 +43,16 @@
     <ClInclude Include="src\Callbacks.h">
       <Filter>Graficos</Filter>
     </ClInclude>
-    <ClInclude Include="src\Camera.h">
+    <ClInclude Include="src\Camara.h">
       <Filter>Graficos</Filter>
     </ClInclude>
     <ClInclude Include="src\Globals.h">
+      <Filter>Graficos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Graphics.h">
+      <Filter>Graficos</Filter>
+    </ClInclude>
+    <ClInclude Include="src\Modelo.h">
       <Filter>Graficos</Filter>
     </ClInclude>
   </ItemGroup>
