--- a/Ajedrez/Ajedrez.vcxproj
+++ b/Ajedrez/Ajedrez.vcxproj
@@ -153,6 +153,7 @@
     <ClCompile Include="src\structs.cpp" />
     <ClCompile Include="src\Tablero.cpp" />
     <ClCompile Include="src\Torre.cpp" />
+    <ClCompile Include="src\InfoTablas.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\Alfil.h" />
@@ -172,6 +173,7 @@
     <ClInclude Include="src\structs.h" />
     <ClInclude Include="src\Tablero.h" />
     <ClInclude Include="src\Torre.h" />
+    <ClInclude Include="src\InfoTablas.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
