--- a/.gitignore
+++ b/.gitignore
@@ -408,3 +408,18 @@ Ajedrez/.vs/Ajedrez/v17/.suo
 *.db
 *.sqlite
 Ajedrez/.vs/Ajedrez/v17/.suo
+*.ipch
+Ajedrez/.vs/Ajedrez/v17/Browse.VC.db
+Ajedrez/.vs/Ajedrez/v17/ipch/AutoPCH/1b0a3ef44e4abf36/CAMPO.ipch
+Ajedrez/.vs/Ajedrez/v17/ipch/AutoPCH/30cdfd626dfd984a/NOFINALIZADAS.ipch
+Ajedrez/.vs/Ajedrez/v17/ipch/AutoPCH/38b9f0e984557a17/PARTIDA.ipch
+Ajedrez/.vs/Ajedrez/v17/ipch/AutoPCH/4b4b9dac81dcc572/ASCIIGRAPHICS.ipch
+Ajedrez/.vs/Ajedrez/v17/ipch/AutoPCH/54ba0b2f631bf149/DATOSRANKING.ipch
+Ajedrez/.vs/Ajedrez/v17/ipch/AutoPCH/898781038ff975b0/DATOSRANKING.ipch
+Ajedrez/.vs/Ajedrez/v17/ipch/AutoPCH/b53ba1e1fa8485de/RANKING.ipch
+Ajedrez/.vs/Ajedrez/v17/ipch/AutoPCH/c935013594229f/MAIN.ipch
+Ajedrez/.vs/Ajedrez/v17/ipch/AutoPCH/f7f6b1467f2b8917/NOFINALIZADAS.ipch
+Ajedrez/.vs/Proyecto_Cpp/FileContentIndex/1d60b788-4bc6-456b-b555-868e72927109.vsidx
+Ajedrez/.vs/Proyecto_Cpp/FileContentIndex/5095db18-1137-4b0e-a46c-8e63b3504655.vsidx
+Ajedrez/.vs/Proyecto_Cpp/FileContentIndex/7ef44400-cc4d-42b2-b8bf-2645a3e2fb6b.vsidx
+Ajedrez/.vs/Proyecto_Cpp/FileContentIndex/a468de28-d43d-4d5d-8aba-6d1bbeb0362e.vsidx
